fixes and minor changes on mobile view, added abillity to show group members in chat header

--- a/_sass/blank.scss
+++ b/_sass/blank.scss
@@ -14,12 +14,13 @@
     width: 460px;
   }
   h1 {
-    margin-top: 38px;
+    margin-top: 10px;
     color: #4b5961;
     font-weight: 300;
     font-size: 24px;
     @media (min-width: 800px) {
       font-size: 36px;
+      margin-top: 38px;
     }
   }
   p{
@@ -33,10 +34,11 @@
     background: url(../img/wap.jpeg) no-repeat center;
     background-size: contain;
     width: 100%;
-    height: 355px;
+    height: 300px;
     margin: 0 auto;
     @media (min-width: 800px) {
       width: 356px;
+      height: 355px;
     }
   }
 }
